# SkinningTools

./: .gitignore  README.md  __init__.py  dockTool.py  dragDropInstall.mel  packageCreator.py  packageInstaller.py  py23.py  reloader.py  ui text.txt
Maya/: api.py  (+2 more)
Maya/plugin/: BuildPlugins.bat  BuildPlugins.sh  BuildPluginsLinux.sh  CMakeLists.txt  SkinEditPlugin.py  averageWeightPlugin.py  howToBuild.txt  maya_node_ids_assignements.txt  run_cmake_visual2017.bat
Maya/plugin/averageWeightPerryCpp/: BuildPlugins.bat  BuildPlugins.sh  BuildPluginsLinux.sh  CMakeLists.txt
Maya/plugin/averageWeightPerryCpp/comp/Maya2017/plug-ins/: skinCommands.bundle  skinCommands.mll
Maya/plugin/averageWeightPerryCpp/comp/Maya2018/plug-ins/: skinCommands.bundle  skinCommands.mll
Maya/plugin/averageWeightPerryCpp/comp/Maya2019/plug-ins/: skinCommands.bundle  skinCommands.mll
Maya/plugin/averageWeightPerryCpp/comp/Maya2020/plug-ins/: skinCommands.bundle  skinCommands.mll
Maya/plugin/averageWeightPerryCpp/comp/Maya2022/plug-ins/: skinCommands.bundle  skinCommands.mll
Maya/plugin/averageWeightPerryCpp/comp/Maya2023/plug-ins/: skinCommands.bundle  skinCommands.mll
Maya/plugin/averageWeightPerryCpp/comp/Maya2024/plug-ins/: skinCommands.mll
Maya/plugin/averageWeightPerryCpp/comp/Maya2025/plug-ins/: skinCommands.mll
Maya/plugin/averageWeightPerryCpp/modules/: FindMaya.cmake
Maya/plugin/averageWeightPerryCpp/projects/: CMakeLists.txt  averagevtxweight.cpp  main.cpp  skinweights.cpp  skinweights.h
Maya/plugin/cmake/: FindMaya.cmake
Maya/plugin/projects/: averagevtxweight.cpp  averagevtxweight.h  main.cpp  skinweights.cpp  utils.hpp
Maya/plugin/projects/SkinCommands/: CMakeLists.txt  averagevtxweight.cpp  averagevtxweight.h  main.cpp  skinweights.cpp  utils.hpp
Maya/plugin/skinToolWeightsCpp/: BuildPlugins.bat  BuildPlugins.sh
Maya/plugin/skinToolWeightsCpp/comp/Maya2018/plug-ins/: skinCommands.bundle
Maya/plugin/skinToolWeightsCpp/comp/Maya2020/plug-ins/: skinCommands.bundle
Maya/plugin/skinToolWeightsCpp/comp/maya2023/plug-ins/: skinCommands.mll
Maya/plugin/skinToolWeightsCpp/lib/maya2017/release/: smooth_brush_maya.bundle  smooth_brush_maya.mll
Maya/plugin/skinToolWeightsCpp/lib/maya2018/release/: smooth_brush_maya.mll
Maya/plugin/skinToolWeightsCpp/lib/maya2019/release/: smooth_brush_maya.mll
Maya/plugin/skinToolWeightsCpp/lib/maya2020/release/: smooth_brush_maya.bundle  smooth_brush_maya.mll
Maya/plugin/skinToolWeightsCpp/lib/maya2022/release/: smooth_brush_maya.bundle  smooth_brush_maya.mll
Maya/plugin/skinToolWeightsCpp/lib/maya2023/release/: smooth_brush_maya.mll
Maya/plugin/skinToolWeightsCpp/lib/maya2024/release/: smooth_brush_maya.mll
Maya/plugin/skinToolWeightsCpp/lib/maya2025/release/: smooth_brush_maya.mll
Maya/plugin/skinToolWeightsCpp/projects/: CMakeLists.txt  main.cpp  skinweights.cpp  skinweights.h
Maya/plugin/smoothBrushRodCpp/: BuildPlugins.bat  BuildPlugins.sh  BuildPluginsLinux.sh  CMakeLists.txt  FindMaya.cmake  run_cmake.py  smooth_brush.pri  smooth_brush.pro  smooth_brush_pri_update.py  todo.txt
Maya/plugin/smoothBrushRodCpp/commons/: build_tools.py  cmake_maya_plugin.py  generate_pri_files.py
Maya/plugin/smoothBrushRodCpp/lib/maya2017/release/: smooth_brush_maya.mll
Maya/plugin/smoothBrushRodCpp/lib/maya2018/release/: smooth_brush_maya.mll
Maya/plugin/smoothBrushRodCpp/lib/maya2019/release/: smooth_brush_maya.mll
Maya/plugin/smoothBrushRodCpp/lib/maya2020/release/: smooth_brush_maya.mll
Maya/plugin/smoothBrushRodCpp/lib/maya2022/release/: smooth_brush_maya.mll
Maya/plugin/smoothBrushRodCpp/lib/maya2023/release/: smooth_brush_maya.mll
Maya/plugin/smoothBrushRodCpp/lib/maya2024/release/: smooth_brush_maya.mll
Maya/plugin/smoothBrushRodCpp/lib/maya2025/release/: smooth_brush_maya.mll
Maya/plugin/smoothBrushRodCpp/src/data/: brush.hpp  build_examples.hpp  rig.hpp  user_data.hpp
Maya/plugin/smoothBrushRodCpp/src/maya_commands/: cmd_swe_brush.cpp  cmd_swe_cache_manager.hpp
Maya/plugin/smoothBrushRodCpp/src/maya_nodes/: node_swe_cache.cpp
Maya/plugin/smoothBrushRodCpp/src/operations/: relax_grad_descent_optim.cpp
Maya/plugin/smoothBrushRodCpp/src/toolbox_config/: tbx_assert.cpp  tbx_printf.cpp  tbx_printf.hpp
Maya/plugin/smoothBrushRodCpp/src/toolbox_maths/: bbox3.hpp  calculus.hpp  dual_quat.hpp  idx3.hpp  math_typedefs.hpp  quat.hpp
Maya/plugin/smoothBrushRodCpp/src/toolbox_mesh/: mesh_geometry.inl  mesh_topology.cpp  mesh_topology.hpp  mesh_topology_lvl_1.hpp  mesh_utils.hpp
Maya/plugin/smoothBrushRodCpp/src/toolbox_stl/: time_tracker.cpp  time_tracker.hpp
Maya/plugin/smoothBrushRodCppTest/: BuildPlugins.bat  BuildPlugins.sh  BuildPluginsLinux.sh  CMakeLists.txt  FindMaya.cmake
Maya/plugin/smoothBrushRodCppTest/src/: CMakeLists.txt  sbr_plugin.cpp  sbr_settings.hpp  sbr_utils.cpp  sbr_utils.hpp
Maya/plugin/smoothBrushRodCppTest/src/data/: build_examples.cpp  rig.cpp  rig.hpp  skin_deformer.hpp  user_data.hpp  user_data_enum.hpp
Maya/plugin/smoothBrushRodCppTest/src/maya_commands/: cmd_swe_brush.hpp  cmd_swe_cache_manager.cpp
Maya/plugin/smoothBrushRodCppTest/src/maya_nodes/: node_swe_cache.hpp
Maya/plugin/smoothBrushRodCppTest/src/operations/: arap_svd.cpp  arap_svd.hpp  relax_grad_descent_optim.hpp  smoothing.cpp  smoothing.hpp
Maya/plugin/smoothBrushRodCppTest/src/toolbox_config/: char_array.cpp  char_array.hpp  tbx_assert.hpp  tbx_macros.hpp
Maya/plugin/smoothBrushRodCppTest/src/toolbox_maths/: calculus.inl  eigen_lib_interop.hpp  matrix3x3.hpp  point3.hpp  ray.hpp  settings_end.hpp  transfo.hpp  transfo.inl  triplet.hpp  vector2.hpp  vector3.hpp  vector3_i.hpp  vector4.hpp
Maya/plugin/smoothBrushRodCppTest/src/toolbox_maya/: settings_end.hpp
Maya/plugin/smoothBrushRodCppTest/src/toolbox_mesh/: mesh_geometry.hpp  mesh_group.cpp  mesh_group.hpp  mesh_type.hpp  mesh_utils.cpp  mesh_utils.inl  settings_end.hpp
Maya/plugin/smoothBrushRodCppTest/src/toolbox_stl/: map.hpp  memory.hpp  set.hpp  settings_end.hpp  stack.hpp  string.hpp  tbx_utils.hpp  timer.cpp  timer.hpp  vector.hpp
(+289 files in other folders)
